<resources>
    <string name="app_name">Servicios Publicos</string>
    <string name="action_listado">Listado de registros</string>
    <string name="modificar_registro">Modificar Registro</string>
    <string name="borrar_registro">Borrar Registro</string>

    <string name="direccion">Direccion:</string>
    <string name="medida">Medida:</string>
    <string name="tipo_servicio">Servicio:</string>
    <string name="unidad_agua">m^3</string>
    <string name="unidad_luz">kw/h</string>
    <string name="unidad_gas">cc</string>

    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="bt_eliminar">Eliminar registro</string>
    <string name="bt_actualizar">Actualizar registro</string>
</resources>
